k8s/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default-mtls
  namespace: uber
spec:
  host: "*.uber.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
